--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +17,7 @@
 
   <body>
     <!-- Шапка сайту -->
-    <header class="menu">
+    <header class="menu container">
       <nav class="navi">
         <a class="logo link" href="./index.html">Web<span class="logo-text-header">Studio</span></a>
 
@@ -43,28 +44,28 @@
 
     <main>
       <!-- Герой -->
-      <section class="hero">
+      <section class="hero container">
         <h1 class="hero-title capitalize">Ефективні рішення для вашого бізнесу</h1>
         <button class="btn-primary" type="button">Замовити послугу</button>
       </section>
 
       <!-- Особливості -->
-      <section class="features">
+      <section class="features container">
         <h2 class="visually-hidden">Наші особливості</h2>
-        <ul class="list">
-          <li>
+        <ul class="features-items list">
+          <li class="item">
             <h3 class="features-title capitalize">Увага до деталей</h3>
             <p class="features-desc">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="features-title capitalize">Пунктуальність</h3>
             <p class="features-desc">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="features-title capitalize">Планування</h3>
             <p class="features-desc">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="features-title capitalize">Сучасні технології</h3>
             <p class="features-desc">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
@@ -72,41 +73,41 @@
       </section>
 
       <!-- Чим ми займаємося -->
-      <section class="activities">
+      <section class="activities container">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="activities-list list">
-          <li>
-            <img src="./images/box1.jpg" alt="Верстка макету" width="370" height="294" />
+        <ul class="activities-items list">
+          <li class="item">
+            <img class="activities-img" src="./images/box1.jpg" alt="Верстка макету" width="370" height="294" />
           </li>
-          <li>
-            <img src="./images/box2.jpg" alt="Адаптація для гаджетів" width="370" height="294" />
+          <li class="item">
+            <img class="activities-img" src="./images/box2.jpg" alt="Адаптація для гаджетів" width="370" height="294" />
           </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Стилізація сайту" width="370" height="294" />
+          <li class="item">
+            <img class="activities-img" src="./images/box3.jpg" alt="Стилізація сайту" width="370" height="294" />
           </li>
         </ul>
       </section>
 
       <!-- Наша команда -->
-      <section class="team">
+      <section class="team container">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li>
+        <ul class="team-items list">
+          <li class="item">
             <img src="./images/member1.jpg" width="270" height="260" alt="Ігор Дем'яненко" />
             <h3 class="team-name">Ігор Дем'яненко</h3>
             <p class="team-role">Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img src="./images/member2.jpg" width="270" height="260" alt="Ольга Рєпіна" />
             <h3 class="team-name">Ольга Рєпіна</h3>
             <p class="team-role">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img src="./images/member3.jpg" width="270" height="260" alt="Микола Тарасов" />
             <h3 class="team-name">Микола Тарасов</h3>
             <p class="team-role">Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img src="./images/member4.jpg" width="270" height="260" alt="Михайло Єрмаков" />
             <h3 class="team-name">Михайло Єрмаков</h3>
             <p class="team-role">UI Designer</p>
@@ -116,7 +117,7 @@
     </main>
 
     <!-- Підвал -->
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
       <address class="footer-contacts">
         <ul class="address-items list">
