--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Шапка сайту -->
     <header class="menu">
-      <div class="nav-container">
+      <div class="main-nav container">
         <nav class="navi">
           <a class="logo link" href="./index.html">Web<span class="logo-text-header">Studio</span></a>
 
@@ -35,9 +35,7 @@
             <li class="item"><a class="header-link" href="">Контакти</a></li>
           </ul>
         </nav>
-      </div>
 
-      <div class="contacts-container">
         <ul class="navi-contacts list">
           <li class="item">
             <a class="navi-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -59,7 +57,7 @@
       </section>
 
       <!-- Особливості -->
-      <section class="features">
+      <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Наші особливості</h2>
           <ul class="features-items list">
@@ -84,7 +82,7 @@
       </section>
 
       <!-- Чим ми займаємося -->
-      <section class="activities">
+      <section class="activities section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="activities-items list">
@@ -108,27 +106,27 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-items list">
             <li class="item">
-              <img src="./images/member1.jpg" width="270" height="260" alt="Ігор Дем'яненко" />
+              <img class="team-image" src="./images/member1.jpg" width="270" height="260" alt="Ігор Дем'яненко" />
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-role">Product Designer</p>
             </li>
             <li class="item">
-              <img src="./images/member2.jpg" width="270" height="260" alt="Ольга Рєпіна" />
+              <img class="team-image" src="./images/member2.jpg" width="270" height="260" alt="Ольга Рєпіна" />
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-role">Frontend Developer</p>
             </li>
             <li class="item">
-              <img src="./images/member3.jpg" width="270" height="260" alt="Микола Тарасов" />
+              <img class="team-image" src="./images/member3.jpg" width="270" height="260" alt="Микола Тарасов" />
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-role">Marketing</p>
             </li>
             <li class="item">
-              <img src="./images/member4.jpg" width="270" height="260" alt="Михайло Єрмаков" />
+              <img class="team-image" src="./images/member4.jpg" width="270" height="260" alt="Михайло Єрмаков" />
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-role">UI Designer</p>
             </li>
