--- a/portfolio.html
+++ b/portfolio.html
@@ -20,124 +20,147 @@
   <body>
     <!-- Шапка сайту -->
     <header class="menu">
-      <nav class="navi">
-        <a class="logo link" href="./index.html">Web<span class="logo-text-header">Studio</span></a>
+      <div class="main-nav container">
+        <nav class="navi">
+          <a class="logo link" href="./index.html">Web<span class="logo-text-header">Studio</span></a>
 
-        <ul class="navi-items list">
+          <ul class="navi-items list">
+            <li class="item">
+              <a class="header-link" href="./index.html">Студія</a>
+            </li>
+            <li class="item">
+              <a class="header-link current" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="item"><a class="header-link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+
+        <ul class="navi-contacts list">
           <li class="item">
-            <a class="header-link" href="./index.html">Студія</a>
+            <a class="navi-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a class="header-link current" href="./portfolio.html">Портфоліо</a>
+            <a class="navi-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
-          <li class="item"><a class="header-link" href="">Контакти</a></li>
         </ul>
-      </nav>
-
-      <ul class="navi-contacts list">
-        <li class="item">
-          <a class="navi-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a class="navi-link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section class="portfolio">
-        <h1 class="visually-hidden">Наші проєкти</h1>
+      <section class="portfolio section">
+        <div class="container">
+          <h1 class="visually-hidden">Наші проєкти</h1>
+          <ul class="filter-items list">
+            <li class="item">
+              <button type="button" class="btn-secondary">Усі</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-secondary">Веб-сайти</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-secondary">Додатки</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-secondary">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-secondary">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="filter list">
-          <li>
-            <button type="button" class="btn-secondary">Усі</button>
-          </li>
-          <li>
-            <button type="button" class="btn-secondary">Веб-сайти</button>
-          </li>
-          <li>
-            <button type="button" class="btn-secondary">Додатки</button>
-          </li>
-          <li>
-            <button type="button" class="btn-secondary">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="btn-secondary">Маркетинг</button>
-          </li>
-        </ul>
-
-        <ul class="list">
-          <li class="card">
-            <img src="./images/project1.jpg" width="370" height="294" alt="Технокряк" />
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p class="portfolio-desc">Веб-сайт</p>
-          </li>
-          <li class="card">
-            <img src="./images/project2.jpg" width="370" height="294" alt="Постер New Orlean vs Golden Star" />
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-desc">Дизайн</p>
-          </li>
-          <li class="card">
-            <img src="./images/project3.jpg" width="370" height="294" alt="Ресторан Seafood" />
-            <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p class="portfolio-desc">Додаток</p>
-          </li>
-          <li class="card">
-            <img src="./images/project4.jpg" width="370" height="294" alt="Проєкт Prime" />
-            <h2 class="portfolio-title">Проєкт Prime</h2>
-            <p class="portfolio-desc">Маркетинг</p>
-          </li>
-          <li class="card">
-            <img src="./images/project5.jpg" width="370" height="294" alt="Проєкт Boxes" />
-            <h2 class="portfolio-title">Проєкт Boxes</h2>
-            <p class="portfolio-desc">Додаток</p>
-          </li>
-          <li class="card">
-            <img src="./images/project6.jpg" width="370" height="294" alt="Inspiration has no Borders" />
-            <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p class="portfolio-desc">Веб-сайт</p>
-          </li>
-          <li class="card">
-            <img src="./images/project7.jpg" width="370" height="294" alt="Видання Limited Edition" />
-            <h2 class="portfolio-title">Видання Limited Edition</h2>
-            <p class="portfolio-desc">Дизайн</p>
-          </li>
-          <li class="card">
-            <img src="./images/project8.jpg" width="370" height="294" alt="Проєкт LAB" />
-            <h2 class="portfolio-title">Проєкт LAB</h2>
-            <p class="portfolio-desc">Маркетинг</p>
-          </li>
-          <li class="card">
-            <img src="./images/project9.jpg" width="370" height="294" alt="Growing Business" />
-            <h2 class="portfolio-title">Growing Business</h2>
-            <p class="portfolio-desc">Додаток</p>
-          </li>
-        </ul>
+          <ul class="cards list">
+            <li class="card">
+              <img class="card-img" src="./images/project1.jpg" width="370" height="294" alt="Технокряк" />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class="portfolio-desc">Веб-сайт</p>
+            </li>
+            <li class="card">
+              <img
+                class="card-img"
+                src="./images/project2.jpg"
+                width="370"
+                height="294"
+                alt="Постер New Orlean vs Golden Star"
+              />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-desc">Дизайн</p>
+            </li>
+            <li class="card">
+              <img class="card-img" src="./images/project3.jpg" width="370" height="294" alt="Ресторан Seafood" />
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p class="portfolio-desc">Додаток</p>
+            </li>
+            <li class="card">
+              <img class="card-img" src="./images/project4.jpg" width="370" height="294" alt="Проєкт Prime" />
+              <h2 class="portfolio-title">Проєкт Prime</h2>
+              <p class="portfolio-desc">Маркетинг</p>
+            </li>
+            <li class="card">
+              <img class="card-img" src="./images/project5.jpg" width="370" height="294" alt="Проєкт Boxes" />
+              <h2 class="portfolio-title">Проєкт Boxes</h2>
+              <p class="portfolio-desc">Додаток</p>
+            </li>
+            <li class="card">
+              <img
+                class="card-img"
+                src="./images/project6.jpg"
+                width="370"
+                height="294"
+                alt="Inspiration has no Borders"
+              />
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
+              <p class="portfolio-desc">Веб-сайт</p>
+            </li>
+            <li class="card">
+              <img
+                class="card-img"
+                src="./images/project7.jpg"
+                width="370"
+                height="294"
+                alt="Видання Limited Edition"
+              />
+              <h2 class="portfolio-title">Видання Limited Edition</h2>
+              <p class="portfolio-desc">Дизайн</p>
+            </li>
+            <li class="card">
+              <img class="card-img" src="./images/project8.jpg" width="370" height="294" alt="Проєкт LAB" />
+              <h2 class="portfolio-title">Проєкт LAB</h2>
+              <p class="portfolio-desc">Маркетинг</p>
+            </li>
+            <li class="card">
+              <img class="card-img" src="./images/project9.jpg" width="370" height="294" alt="Growing Business" />
+              <h2 class="portfolio-title">Growing Business</h2>
+              <p class="portfolio-desc">Додаток</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Підвал -->
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
-      <address class="footer-contacts">
-        <ul class="address-items list">
-          <li class="item">
-            <a
-              class="address-link"
-              href="https://goo.gl/maps/n3ZvedRcKPrbeR4S9"
-              target="_blank"
-              rel="noreferrer noopener nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="item">
-            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
+        <address class="footer-contacts">
+          <ul class="address-items list">
+            <li class="item">
+              <a
+                class="address-link"
+                href="https://goo.gl/maps/n3ZvedRcKPrbeR4S9"
+                target="_blank"
+                rel="noreferrer noopener nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
