--- a/portfolio.html
+++ b/portfolio.html
@@ -71,9 +71,13 @@
           <ul class="cards list">
             <li class="card">
               <img class="card-img" src="./images/project1.jpg" width="370" height="294" alt="Технокряк" />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-desc">Веб-сайт</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Технокряк</h2>
+                <p class="card-type">Веб-сайт</p>
+              </div>
             </li>
+
             <li class="card">
               <img
                 class="card-img"
@@ -82,24 +86,40 @@
                 height="294"
                 alt="Постер New Orlean vs Golden Star"
               />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-desc">Дизайн</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+                <p class="card-type">Дизайн</p>
+              </div>
             </li>
+
             <li class="card">
               <img class="card-img" src="./images/project3.jpg" width="370" height="294" alt="Ресторан Seafood" />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-desc">Додаток</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Ресторан Seafood</h2>
+                <p class="card-type">Додаток</p>
+              </div>
             </li>
+
             <li class="card">
               <img class="card-img" src="./images/project4.jpg" width="370" height="294" alt="Проєкт Prime" />
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class="portfolio-desc">Маркетинг</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Проєкт Prime</h2>
+                <p class="card-type">Маркетинг</p>
+              </div>
             </li>
+
             <li class="card">
               <img class="card-img" src="./images/project5.jpg" width="370" height="294" alt="Проєкт Boxes" />
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class="portfolio-desc">Додаток</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Проєкт Boxes</h2>
+                <p class="card-type">Додаток</p>
+              </div>
             </li>
+
             <li class="card">
               <img
                 class="card-img"
@@ -108,9 +128,13 @@
                 height="294"
                 alt="Inspiration has no Borders"
               />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-desc">Веб-сайт</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Inspiration has no Borders</h2>
+                <p class="card-type">Веб-сайт</p>
+              </div>
             </li>
+
             <li class="card">
               <img
                 class="card-img"
@@ -119,18 +143,29 @@
                 height="294"
                 alt="Видання Limited Edition"
               />
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-desc">Дизайн</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Видання Limited Edition</h2>
+                <p class="card-type">Дизайн</p>
+              </div>
             </li>
+
             <li class="card">
               <img class="card-img" src="./images/project8.jpg" width="370" height="294" alt="Проєкт LAB" />
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class="portfolio-desc">Маркетинг</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Проєкт LAB</h2>
+                <p class="card-type">Маркетинг</p>
+              </div>
             </li>
+
             <li class="card">
               <img class="card-img" src="./images/project9.jpg" width="370" height="294" alt="Growing Business" />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-desc">Додаток</p>
+
+              <div class="card-desc">
+                <h2 class="card-title">Growing Business</h2>
+                <p class="card-type">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
