--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="item">
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="item"><a class="header-link" href="">Контакти</a></li>
+            <li class="item"><a class="header-link" href="#">Контакти</a></li>
           </ul>
         </nav>
 
