--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,9 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -177,8 +180,8 @@
       <div class="container">
         <a class="logo" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
         <address class="footer-contacts">
-          <ul class="address-items list">
-            <li class="item">
+          <ul class="address-list list">
+            <li class="address-item">
               <a
                 class="address-link"
                 href="https://goo.gl/maps/n3ZvedRcKPrbeR4S9"
@@ -187,10 +190,10 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="item">
+            <li class="address-item">
               <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="item">
+            <li class="address-item">
               <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
